# project-starter

./: .clang-format  CMakeLists.txt  LICENSE  README.md  conanfile.txt
.github/workflows/: blank.yml  workflow.yml
src/: main.cpp
